--- a/2015spring/task001/css/main.css
+++ b/2015spring/task001/css/main.css
@@ -1,205 +1,100 @@
+/* 清除默认样式，设置全局样式 */
 * {
-    box-sizing: border-box;
-    text-decoration: none;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
+body {
+    background-color: #eee;
+}
+a {
+    color: inherit;
+    text-decoration: none;
+}
+ul {
+    list-style-type: none;
+}
+ul li {
+    display: inline-block;
+}
+.container {
+    position: relative;
+    width: 980px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+/* 设置页面首部 */
 header {
     position: relative;
+    height: 100px;
     min-width: 980px;
-    height: 80px;
     background-color: purple;
 }
 header nav {
-    position: relative;
-    width: 980px;
-    height: 100%;
-    margin: 0 auto;
-}
-header nav * {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 100px;
+    padding-bottom: 10px;
     color: #fff;
 }
-header nav h1, header nav ul {
-    position: absolute;
-    bottom: 15px;
+header nav h1 {
+    font-size: 30px;
+    font-weight: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 header nav ul {
-    right: 0;
+    font-size: 16px;
 }
-header nav ul a {
-    padding-left: 30px;
-    font-family: "宋体";
-    font-size: 14px;
+header nav ul li {
+    margin-left: 30px;
 }
-header>a {
+header > a {
     position: absolute;
-    height: 34px;
-    right: 35px;
     bottom: 0;
+    right: 30px;
+    height: 34px;
 }
-@media (max-width: 1200px) {
-    header>a {
+@media (max-width: 1100px) {
+    header > a {
         display: none;
     }
 }
-
-#banner {
-    background-image: url(../img/banner-bg.jpg);
-    background-size: auto 500px;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    min-width: 980px;
-    height: 400px;
-}
-#banner > div {
-    position: relative;
-    width: 980px;
-    height: 100%;
-    margin: 0 auto;
-}
-#banner .content {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 400px;
-    padding: 10px;
-    padding-bottom: 30px;
-    text-indent: 2em;
-    text-align: right;
-    color: #fff;
-
-    background-image: linear-gradient(to bottom, 
-        rgba(255, 255, 255, 0.6) 0%,
-        rgba(255, 255, 255, 0.2) 75%,
-        rgba(255, 255, 255, 0) 100%
-    );
-}
-#banner .content h2 {
-    font-size: 14px;
-    margin: 0;
-    margin-bottom: 12px;
-}
-#banner .content p {
-    font-size: 12px;
-    line-height: 1.5em;
-    margin: 0;
-    text-align: justify;
-}
-
-.figure-text {
-    display: flex;
-    min-width: 980px;
-    flex-direction: row;
-    align-items: flex-start;    
-    justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 80px;
-    background-color: #eee;
-}
-
-.figure-text div {
-    flex-shrink: 0;
-    width: 320px;
-    padding: 10px;
-    margin-left: 10px;
-    background-color: #fff;
-}
-.figure-text img {
-    margin-bottom: 15px;
-}
-.figure-text p {
-    padding: 0 30px;
-    font-size: 16px;
-    line-height: 1.7em;
-    text-indent: 2em;
-    text-justify: justify;
-}
-.figure-text div:nth-child(1){
-    margin-left: 0;
-}
-.user {
-    padding-bottom: 200px;
-    min-width: 980px;
-}
-.user .user-avatar {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    margin: -40px auto 20px auto;
-    border-radius: 100px;
-    overflow: hidden;
-}
-.user .user-avatar img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -260px;
-    margin-top: -120px;
-}
-.user h2 {
-    font-family: "Century Gothic";
-    font-size: 40px;
-    text-align: center;
-    margin: 40px auto;
-}
-.user p {
-    width: 800px;
-    margin: 0 auto;
-    font-size: 20px;
-    text-align: justify;
-    text-indent: 2em;
-    line-height: 1.5;
-}
+/* 设置页面底部样式 */
 footer {
     background-color: #000;
+    color: #fff;
     min-width: 980px;
 }
-footer ul.nav {
-    border-bottom: 1px solid #666;
-    padding: 10px;
+footer .nav {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgb(99, 97, 97);
     text-align: center;
-    color: #fff;
+} 
+footer .nav li {
+    display: inline;
+    margin: 0 10px;
 }
-footer ul.nav li {
+footer .link {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 14px;
+}
+footer .link dl {
     display: inline-block;
-    margin-left: 20px;
+    width: 180px;
+    line-height: 2;
 }
-footer ul.nav li:nth-child(1) {
-    margin-left: 0;
+footer .link dl dt {
+    color: #888;
+    padding-bottom: 10px;
 }
-footer .container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 980px;
-    margin: 0px auto;
-    padding: 50px;
-    padding-left: 0;
-    color: #fff;
-}
-footer .container div {
-    width: 200px;
-}
-footer .container div ul {
-    list-style-type: none;
-    margin-top: 30px;
-    font-size: 12px;
-}
-footer .container div li {
-    line-height: 2em;
-}
-footer .container div h3 {
-    font-size: 16px;
-    color: #999;
+footer .link dl dd:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 footer .copyright {
-    color: #fff;
-    font-size: 16px;
     text-align: center;
-}
-footer .copyright img {
-    margin-top: 10px;
+    line-height: 2;
 }
