--- a/2015spring/task001/css/index.css
+++ b/2015spring/task001/css/index.css
@@ -62,6 +62,7 @@
 /* user部分 */
 .user {
     position: relative;
+    min-width: 980px;
     padding-top: 150px;
     padding-bottom: 100px;
     background: #fff;
