--- a/2018/basicTask3/main.css
+++ b/2018/basicTask3/main.css
@@ -1,7 +1,17 @@
 /*初始化样式*/
+@font-face {
+    font-family: 'noto-sans-sc';
+    src: url('notosanssc-medium-webfont.woff2') format('woff2'),
+         url('notosanssc-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
+    font-family: 'noto-sans-sc', 'PingFang SC','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 /*页面整体字体和背景颜色*/
@@ -28,6 +38,7 @@ section > h2 {
     font-size: 2.5em;
     letter-spacing: .2em;
     margin-bottom: 15px;
+    
 }
 
 section p,
