--- a/2018/basic-task6/three-col.css
+++ b/2018/basic-task6/three-col.css
@@ -40,19 +40,27 @@ body > div {
 .container-1 .left {
     margin-left: -100%;
     width: 200px;
-    position: relative;
-    left: -200px
 }
 .container-1 .right {
     margin-left: -150px;
     width: 150px;
-    position: relative;
-    right: -150px;
 }
+
+
 .container-1 {
     padding-left: 200px;
     padding-right: 150px;
 }
+
+.container-1 .left {
+    position: relative;
+    left: -200px
+}
+.container-1 .right {
+    position: relative;
+    right: -150px;
+}
+
 
 /*双飞翼布局*/
 .container-2 .wrap {
